--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -865,7 +865,7 @@ section {
 --------------------------------------------------------------*/
 .services {
   width: 100%;
-  height: 70vh;
+  height: auto;
   background: url(../img/achievementsbg.jpg) top center;
   background-size: cover;
   overflow: hidden;
